# smolstore

./: .gitignore  .pre-commit-config.yaml  README.rst  azure-pipelines.yml  pyproject.toml  tox.ini
smolstore/: __init__.py  document.py  exceptions.py  field.py  fields.py  query.py  serializers.py  store.py  table.py
tests/: test_documents.py  test_persistence.py  test_smolstore.py  test_store.py  test_tables.py  test_type_behaviour.py
