[tool.poetry]
name = "smolstore"
version = "0.1.0"
description = "A simple in-memory Python document store"
authors = ["Raymond Botha <botha@riseup.net>"]
license = "LGPL-3.0+"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
