[tool.poetry]
name = "smolstore"
version = "0.1.0"
description = "A simple in-memory Python document store"
authors = ["Raymond Botha <botha@riseup.net>"]
license = "LGPL-3.0+"
repository = "https://github.com/raybotha/smolstore"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database"
]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
tox = "^3.13"
flake8 = "^3.7"
isort = "^4.3"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
