[tool.poetry]
name = "smolstore"
version = "0.2.1a"
description = "A simple in-memory Python document store"
authors = ["Raymond Botha <botha@riseup.net>"]
license = "LGPL-3.0+"
repository = "https://github.com/raybotha/smolstore"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
tox = "^3.13"
flake8 = "^3.7"
pytest-cov = "^2.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pre-commit = "^1.17"
reorder-python-imports = "^1.6"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
